discussion/kv_engine/174785/174785_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39344: Remove Vbid arg from CM::createCheckpointMetaItem

Change-Id: I1187fcfa8ae820a22a84d785825545c9ab327545

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-05-13 06:52:17.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-13 07:10:01.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17476/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17476/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17476/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20264/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20264/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19586/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [73/160]: disk>RAM golden path...../kv_engine/engines/ep/tests/ep_testsuite.cc:4294 Test failed: `" (Expected `172", got `92" - kv_size should have returned to initial value after restoring evicted item)
[2022-05-13T06:57:50.133Z] (43 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19586/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16495/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46122/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38741/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7088/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18452/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7184/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19240/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27643/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-05-13 08:17:35.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-13 08:18:34.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19586/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [73/160]: disk>RAM golden path...../kv_engine/engines/ep/tests/ep_testsuite.cc:4294 Test failed: `" (Expected `172", got `92" - kv_size should have returned to initial value after restoring evicted item)
[2022-05-13T06:57:50.133Z] (43 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19586/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17477/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17477/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17477/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16495/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46122/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38741/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7088/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20265/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18452/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7184/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19240/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27643/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-13 08:35:29.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17477/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17477/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17477/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16495/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46122/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38741/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7088/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20265/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18452/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7184/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19240/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27643/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19587/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-05-13 08:47:39.000000000
Message: 
Patch Set 1: Verified+1

(1 comment)
File Comment: /PATCHSET_LEVEL -> Unrelated http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17477
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-05-13 08:47:41.000000000
Message: 
Removed Verified-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-05-13 08:47:45.000000000
Message: 
Removed Code-Review-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
